--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 <section class="section">
 <h2>Education</h2>
 <ul>
-<li><strong>IGNOU (2022–2024)</strong> – M.A. Psychology (Counseling)</li>
+<li><strong>IGNOU (2022–2025)</strong> – M.A. Psychology (Counseling)</li>
 <li><strong>GHRCE, Nagpur (2013–2017)</strong> – B.E. Mechanical Engineering</li>
 <li><strong>New English High School (2011–2013)</strong> – HSC, General Science</li>
-<li><strong>Great Britain High School</strong> – SSC, General</li>
+<li><strong>Great Britain High School (2011)</strong> – SSC, General</li>
 </ul>
 </section>
 
